@@ -1,3 +1,11 @@
+Wed Jan 15 20:15:31 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-theme-manager.c (gnome_theme_manager_tree_sort_func): 
+	remove this unneeded sort func.
+
+	* gnome-theme-details.c (setup_tree_view): use the right sort
+	function.
+
 2003-01-14  Jody Goldberg <jody@gnome.org>
 
 	* gnome-theme-manager.c (load_meta_themes) : yet another place to
