@@ -1,3 +1,8 @@
+Wed Jan 15 20:16:21 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-theme-info.c (remove_data_from_hash_by_name): call
+	correctly in all the right places.
+
 Mon Jan 13 15:04:47 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-theme-info.c: rewrote to handle fam more correctly.  Still
